src/snapshots/yaks__tui__tests__board_list_focus.snap
---
source: src/tui.rs
expression: "draw(&sample(), 72, 14)"
---
 Hairy 2    Shaving 1    Shorn 1
┌ yaks ──────────────────────┐┌ detail ────────────────────────────────┐
│› p2 Alpha task             ││id       fix-0001                       │
│  p1 Beta task              ││title    Alpha task                     │
│                            ││type     task                           │
│                            ││priority 2                              │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
└────────────────────────────┘└────────────────────────────────────────┘
j/k move · Tab tab · l detail · q quit
