src/snapshots/yaks__tui__tests__body_editor_panel.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 1 · Shaving 0 · Shorn 0 · Recent 1 · Starred 0
  [H] p3 Editable               Edit e0 — Ctrl-S save · Ctrl-C cancel
                                First line.
                                Second line.









j/k · c new · E edit · S/P/T/L/X · D/R · / find · f filter · * star · V
