src/snapshots/yaks__tui__tests__collapsed_root_hides_children.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 2 · Shaving 1 · Shorn 1
▸ [H] p2 Root A  (+2)           │ id       a0
                                │ title    Root A
                                │ type     task
                                │ priority 2
                                │
                                │
                                │
                                │
                                │
                                │
                                │
                                │
j/k move · c new · E edit · S/P/T/L/X adjust · Space fold · Tab tab · l
