src/snapshots/yaks__tui__tests__create_form.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 🦬  Hairy (1)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (1)   ⭐  Starr

 e0   p3 task     [rust,│ New yak
                        │   title       new idea
                        │   type         task bug feature idea
                        │ ▸ priority     p1 p2 p3 p4 p5
                        │   labels
                        │   description ───────────────────────────────
                        │ (no description)
                        │
                        │
                        │
                        │
Tab/↑↓ rows · ←→ chips · Ctrl-S create · EscEsc/Ctrl-C cancel
