src/snapshots/yaks__tui__tests__create_title_field.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 1 · Shaving 0 · Shorn 0
  [H] p3 Editable               │ id       e0
                                │ title    Editable
                                │ type     task
                                │ priority 3
                                │ labels   rust, tui
                                │
                                │ First line.
                                │ Second line.
                                │
                                │
                                │
                                │
New yak — title:
