src/snapshots/yaks__tui__tests__detail_find_overlay.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 16)"
---
 🦬  Hairy (3)   🪒  Shaving (0)   🐑  Shorn (0)   🕒  Recent (3)   ⭐  Starr

 a0   p2 task     🦬  Ro │ Children:
   a1 p3 task     🦬  Ch │   🦬  a1  Child A1
   a2 p3 task     🦬  Ch │   🦬  a2  Child A2
                        │
                        │ follow a1 then a2
                        │
                        │
                        │
                        │
                        │
                        │
                        │
                        │
find: child
