src/snapshots/yaks__tui__tests__detail_focus_second_tab.snap
---
source: src/tui.rs
expression: "draw(&app, 72, 14)"
---
 Hairy 2    Shaving 1    Shorn 1
┌ yaks ──────────────────────┐┌ detail ────────────────────────────────┐
│› p3 Gamma in progress      ││id       fix-0003                       │
│                            ││title    Gamma in progress              │
│                            ││type     task                           │
│                            ││priority 3                              │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
│                            ││                                        │
└────────────────────────────┘└────────────────────────────────────────┘
j/k scroll · h back · q quit
